fix(comment): fix comment box actions wrapper wrap

--- a/components/Comment/index.module.scss
+++ b/components/Comment/index.module.scss
@@ -162,8 +162,12 @@
   }
   position: relative;
   margin-top: 0.5rem;
-  display: grid;
-  grid-template-columns: auto 6rem;
+  display: flex;
+
+  & .submit-wrapper {
+    flex: 1;
+    white-space: nowrap;
+  }
 
   & .emoji-wrapper {
     position: relative;
